# LibraryTemplate

./: README.md
Code/: CMakeLists.txt  include_files.cmake  source_files.cmake
Code/Tests/: CMakeLists.txt
